# Cargador_carro

./: README.md
Cargador/: .project  CMakeLists.txt  Makefile  README.md  partitions.csv
Cargador/components/: Makefile  lv_conf.h
Cargador/components/drv/: Bt_lib.c  Bt_lib.h  EPLD.c  EPLD.h  FT5206.c  Functions.c  Functions.h  FunctionsCC.c  FunctionsCC.h  M90E32AS.c  M90E32AS.h  Mqtt_lib.c  PCF85063TP.c  PCF85063TP.h  Parameters.h  RA8875.c  RA8875.h  SC18IS602B.c  Sim800L.c  Sim800L.h  TimerControl.c  TimerControl.h  ZDU0210RJX.c  ZDU0210RJX.h  (+15 more)
Cargador/main/: CMakeLists.txt  EPLD.c  FT5206.c  FT5206.h  Functions.h  FunctionsCC.h  M90E32AS.c  Mqtt_lib.c  Mqtt_lib.h  PCF85063TP.c  PCF85063TP.h  Parameters.h  RA8875.c  RA8875.h  SC18IS602B.h  Sim800L.c  Sim800L.h  ZDU0210RJX.c  ZDU0210RJX.h  badlog.txt  component.mk  dns_server.c  gpio_lib.c  i2c.c  index.html  main.c  maxV.h  modbusMaster.c  modbusMaster.h  ota.h  phoenixcontact.c  phoenixcontact.h  sim800.h  software_i2c.c  software_i2c.h  spi_lib.c  spi_lib.h  spiffs_lib.c  wifi_functions.h
CargadorCochesAiris/: CMakeLists.txt  README.md  partitions.csv  partitions_example.csv
CargadorCochesAiris/main/: Bt_lib.c  Bt_lib.h  Function.c  Function.h  Kconfig.projbuild  LIS3DH.c  LIS3DH.h  M90E32AS.c  M90E32AS.h  RA8875.c  ZDU0210RJX.h  component.mk  http_server.c  i2c.h  main.c  maxV.c  modbusMaster.h  ota.c  phoenixcontact.c  sdcard.c  sdcard.h  sim800.c  software_i2c.c  software_i2c.h  spi_lib.c  spiffs_lib.h  uconsume.c  uconsume.h  wifi_functions.c  wifi_manager.c
Examples/ra8875/: .gitignore  lv_conf.h
(+72 files in other folders)
